<resources>
    <string name="app_name">FireMusic</string>

    <!-- Preference Titles -->
    <string name="url_header">URL</string>

    <!-- Messages Preferences -->
    <string name="url_title">Die URL des Servers (z.B. https://&lt;domäne&gt;/media)</string>
    <string name="sony_title">Sony Bravia</string>
    <string name="sony_description">Die URL des Sony Bravia-Fernsehers, falls vorhanden</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="auth_name" >Name</string>
    <string name="auth_pw">Passwort</string>
    <string name="pw_summary">Passwort eingeben</string>
    <string name="sony_psk">Authentication PSK</string>
    <string name="screen_off">Bildschirm ausschalten</string>

</resources>