<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/url_header">

        <EditTextPreference
            app:key="url"
            app:title="@string/url_title"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sony_title">

        <EditTextPreference
            android:key="sony_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/sony_description"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="sony_psk"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/sony_psk"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>